--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "replicate": "^0.29.1",
+    "sharp": "^0.33.4",
+    "ffmpeg-static": "^5.2.0",
     "typescript": "^5.6.2"
   },
   "scripts": {
